--- a/First/First/Base.lproj/LaunchScreen.storyboard
+++ b/First/First/Base.lproj/LaunchScreen.storyboard
@@ -3,6 +3,7 @@
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -19,7 +20,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                             </imageView>
                         </subviews>
-                        <color key="backgroundColor" red="0.9882352941176471" green="0.91764705882352937" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                        <color key="backgroundColor" name="AppColor"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="vxB-Tn-KtA" secondAttribute="trailing" id="5am-LK-aeH"/>
                             <constraint firstAttribute="bottom" secondItem="vxB-Tn-KtA" secondAttribute="bottom" id="Ihv-gg-DbZ"/>
@@ -36,5 +37,8 @@
     </scenes>
     <resources>
         <image name="splash" width="704" height="704"/>
+        <namedColor name="AppColor">
+            <color red="1" green="0.92941176470588238" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
     </resources>
 </document>
